__attribute__((used)) static void imdct_step3_inner_s_loop(int n, float *e, int i_off, int k_off, float *A, int a_off, int k0)
{
   int i;
   float A0 = A[0];
   float A1 = A[0+1];
   float A2 = A[0+a_off];
   float A3 = A[0+a_off+1];
   float A4 = A[0+a_off*2+0];
   float A5 = A[0+a_off*2+1];
   float A6 = A[0+a_off*3+0];
   float A7 = A[0+a_off*3+1];

   float k00,k11;

   float *ee0 = e +i_off;
   float *ee2 = ee0+k_off;

   for (i=n; i > 0; --i) {
      k00 = ee0[ 0] - ee2[ 0];
      k11 = ee0[-1] - ee2[-1];
      ee0[ 0] = ee0[ 0] + ee2[ 0];
      ee0[-1] = ee0[-1] + ee2[-1];
      ee2[ 0] = (k00) * A0 - (k11) * A1;
      ee2[-1] = (k11) * A0 + (k00) * A1;

      k00 = ee0[-2] - ee2[-2];
      k11 = ee0[-3] - ee2[-3];
      ee0[-2] = ee0[-2] + ee2[-2];
      ee0[-3] = ee0[-3] + ee2[-3];
      ee2[-2] = (k00) * A2 - (k11) * A3;
      ee2[-3] = (k11) * A2 + (k00) * A3;

      k00 = ee0[-4] - ee2[-4];
      k11 = ee0[-5] - ee2[-5];
      ee0[-4] = ee0[-4] + ee2[-4];
      ee0[-5] = ee0[-5] + ee2[-5];
      ee2[-4] = (k00) * A4 - (k11) * A5;
      ee2[-5] = (k11) * A4 + (k00) * A5;

      k00 = ee0[-6] - ee2[-6];
      k11 = ee0[-7] - ee2[-7];
      ee0[-6] = ee0[-6] + ee2[-6];
      ee0[-7] = ee0[-7] + ee2[-7];
      ee2[-6] = (k00) * A6 - (k11) * A7;
      ee2[-7] = (k11) * A6 + (k00) * A7;

      ee0 -= k0;
      ee2 -= k0;
   }
}
